# mini-blockchain

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/api/: mod.rs
src/miner/: mod.rs
src/models/: block.rs  mod.rs  syntactic_validation.rs  transaction.rs  utils.rs
src/p2p/: listener.rs  messages.rs  mod.rs  server.rs
src/storage/: mod.rs
