[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2024"
authors = ["memoriesadrift"]

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
ruint = { version = "1.0", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_canonical_json = "1.0.0"
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = {version = "1.44.1", features = ["full"]}

