[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2024"
authors = ["memoriesadrift"]

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.7"
futures-util = "0.3.31"
hex = "0.4.3"
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
log = "0.4.27"
ruint = { version = "1.0", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_canonical_json = "1.0.0"
serde_json = "1.0.140"
sha2 = "0.10.8"
sled = "0.34.7"
tokio = {version = "1.44.1", features = ["full"]}
tokio-tungstenite = "0.26.2"
warp = "0.3.7"

